# KeioNewsNotificator

./: Cargo.toml  KeioNewsNotificator.code-workspace  README.md  debug_run.bat  release_build.bat
resources/: config.toml
src/: config.rs  error.rs  line.rs  main.rs  news.rs
