[package]
name = "keio_news_notificator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper = "0.19.0"
reqwest = { version = "0.12.2", features = ["blocking"] }
chrono = "0.4.31"
toml = "0.8.8"
serde = "1.0.193"
serde_derive = "1.0.193"
tokio = {version = "1.35.1", features = ["full"]}
